# transcription_summarization_aleph_alpha

./: .gitignore  .isort.cfg  Dockerfile  README.md  docker-compose.yaml  prompt.txt  pyproject.toml  requirements.txt
data/output/: LT1_conv.txt
transcription_summarization_aleph_alpha/: frontend.py
transcription_summarization_aleph_alpha/transcription/: api_handler.py  transcription_service.py
